plugins {
    id 'org.springframework.boot' version '2.3.4.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
}

group = 'com.kobi'
version = '0.0.1'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

ext {
    set('springCloudVersion', "2022.0.3")
}

dependencies {
    implementation ("com.vk.api:sdk:1.0.14"){
        exclude group: "org.apache.logging.log4j", module: "log4j-slf4j-impl"
    }

    implementation 'org.yaml:snakeyaml:1.27'

    implementation 'org.telegram:telegrambots-meta:6.5.0'
    implementation 'org.telegram:telegrambots:6.5.0'
    implementation 'org.telegram:telegrambotsextensions:6.5.0'
    implementation 'com.googlecode.json-simple:json-simple:1.1'
    implementation 'com.vaadin.external.google:android-json:0.0.20131108.vaadin1'
    implementation 'org.apache.tomcat:tomcat-dbcp:10.1.8'
    implementation 'org.slf4j:jcl-over-slf4j'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-devtools'

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'


    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    implementation 'org.hibernate:hibernate-core:5.6.3.Final'
    implementation 'org.postgresql:postgresql:42.3.2'

    implementation 'org.jsoup:jsoup:1.11.3'
    implementation 'com.squareup.okhttp3:okhttp:4.1.0'
    implementation 'com.google.apis:google-api-services-customsearch:v1-rev57-1.23.0'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    testImplementation 'org.mockito:mockito-core:3.12.4'
    testImplementation 'junit:junit'
}

test {
    useJUnitPlatform()
}

bootJar {
    archiveFileName = 'ChatBot.jar'
}

sourceSets {
    main {
        resources {
            srcDir 'src/main/resources'
        }
    }
}
